--- a/packages/docs/src/pages/brand/who-we-are.stories.mdx
+++ b/packages/docs/src/pages/brand/who-we-are.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Brand/Who We Are" />
+<Meta title="WHO WE ARE" />
 
 # Who We Are
-Hello 👋, we are IVAO. IVAO is short for the International Virtual Aviation Organisation, but that is a bit of a mouthful. We are home to over 260,000 registered members who use our online flight simulation platform to fly with, or provide air traffic control services to, other members from around the world. We provide a family-spirited environment to enable our members to enjoy their passion for aviation and flight simulation whilst giving them an opportunity to develop new skills and meet new friends.
+Hello 👋, we are IVAO. That's short for the International Virtual Aviation Organisation, but that is a bit of a mouthful. We are home to over 260,000 registered members who use our online flight simulation platform to fly with, or provide air traffic control services to, other members from around the world. We provide a family-spirited environment to enable our members to enjoy their passion for aviation and flight simulation whilst giving them an opportunity to develop new skills and meet new friends.
