chore: update sotrybook welcome page

--- a/components/react/src/stories/welcome.mdx
+++ b/components/react/src/stories/welcome.mdx
@@ -1,7 +1,21 @@
 import { Meta } from '@storybook/blocks';
 
-<Meta title="WHO WE ARE" />
+<Meta title="Welcome" />
 
-# Who We Are
+# @ivao/atmosphere-react
+
+## Who We Are
 
 Hello 👋, we are IVAO. That's short for the International Virtual Aviation Organisation, but that is a bit of a mouthful. We are home to over 260,000 registered members who use our online flight simulation platform to fly with, or provide air traffic control services to, other members from around the world. We provide a family-spirited environment to enable our members to enjoy their passion for aviation and flight simulation whilst giving them an opportunity to develop new skills and meet new friends.
+IVAO's Design system!
+
+---
+
+- [NPM](https://www.npmjs.com/package/@ivao/atmosphere-react)
+- [GitHub](https://github.com/ivaoaero/atmosphere)
+- [Changelog](https://github.com/ivaoaero/atmosphere/blob/main/CHANGELOG.md)
+- [Contributing](https://github.com/ivaoaero/atmosphere/blob/main/CONTRIBUTING.md)
+
+---
+
+Built with ❤️ all around the world by IVAO Web Developer Team
